NetBSD Problem Report #56613

From martin@duskware.de  Tue Jan 11 08:02:16 2022
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id E7BB51A9239
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 11 Jan 2022 08:02:16 +0000 (UTC)
Message-Id: <20220111080207.4EFDF5CC847@emmas.aprisoft.de>
Date: Tue, 11 Jan 2022 09:02:07 +0100 (CET)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: synaptics touchpad barely usable in 9.99.93
X-Send-Pr-Version: 3.95

>Number:         56613
>Category:       kern
>Synopsis:       synaptics touchpad barely usable in 9.99.93
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    blymn
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Jan 11 08:05:00 +0000 2022
>Closed-Date:    Wed Apr 13 21:56:35 +0000 2022
>Last-Modified:  Wed Apr 13 21:56:35 +0000 2022
>Originator:     Martin Husemann
>Release:        NetBSD 9.99.93
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD night-owl.duskware.de 9.99.93 NetBSD 9.99.93 (NIGHT-OWL) #746: Sun Jan 2 13:44:10 CET 2022 martin@night-owl.duskware.de:/usr/src/sys/arch/amd64/compile/NIGHT-OWL amd64
Architecture: x86_64
Machine: amd64
>Description:

I have two (older) notebooks where the touchpad is mostly unusable in -current
(while it used to work fine for quite a while).

Dmesg from this machine I'm typing on:

pms0 at pckbc1 (aux slot)
pms0: Synaptics touchpad version 7.2
pms0: Extended W mode, Up/down buttons, Palm detect, Multi-finger Report
pckbc1: using irq 12 for aux slot
wsmouse0 at pms0 mux 0


Dmesg from the other machine:

pms0 at pckbc1 (aux slot)
pms0: Synaptics touchpad version 6.5
pms0: Palm detect, Two button click pad
pckbc1: using irq 12 for aux slot
wsmouse0 at pms0 mux 0


The problem is not simple to describe, main issue is that moving to a certain
position, lifting finger and putting it down again at (subjective) same
position makes the mouse jump off by several hundred pixel. Like: move
the mouse cursor to an OK button and try to click it, but before the click
the mouse jumps outside the dialog/prompt window.

But also moving the mouse over large distances where you can not
position it in one swipe is hard, as the beginning of the second swipe
causes some absolute reposition.

>How-To-Repeat:
s/a

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/56613: synaptics touchpad barely usable in 9.99.93
Date: Sat, 15 Jan 2022 15:35:01 +0100

 Downgrading synaptics.c to r1.71 and synapticsvar.h to r1.11
 fixes the issue for me.

 Brett, Nia: could we make the later enhancements depend on the touchpad
 version or capabilities? Or any hints for usefull debugging?

 Martin

Responsible-Changed-From-To: kern-bug-people->blymn
Responsible-Changed-By: blymn@NetBSD.org
Responsible-Changed-When: Mon, 21 Feb 2022 06:42:46 +0000
Responsible-Changed-Why:
I will claim this bug - related to a commit I made.


From: "Brett Lymn" <blymn@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56613 CVS commit: src/sys/dev/pckbport
Date: Thu, 3 Mar 2022 21:03:14 +0000

 Module Name:	src
 Committed By:	blymn
 Date:		Thu Mar  3 21:03:14 UTC 2022

 Modified Files:
 	src/sys/dev/pckbport: synaptics.c synapticsreg.h synapticsvar.h

 Log Message:
 Fix for PR kern/56613

 * For trackpads that report max and min coordinates, retrieve these and
   use them as the boundaries instead of the hard coded limits.
 * Drop packets that are have x/y values that are outside the limits of
   the trackpad.  Some trackpads report a stream of low values in some
   situations that cause cursor jumping.


 To generate a diff of this commit:
 cvs rdiff -u -r1.75 -r1.76 src/sys/dev/pckbport/synaptics.c
 cvs rdiff -u -r1.12 -r1.13 src/sys/dev/pckbport/synapticsreg.h \
     src/sys/dev/pckbport/synapticsvar.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Brett Lymn" <blymn@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56613 CVS commit: src/sys/dev/pckbport
Date: Fri, 1 Apr 2022 06:31:30 +0000

 Module Name:	src
 Committed By:	blymn
 Date:		Fri Apr  1 06:31:30 UTC 2022

 Modified Files:
 	src/sys/dev/pckbport: synaptics.c synapticsvar.h

 Log Message:
 Fix regression introduced when fixing PR kern/56613 and related tweaks

 * A trackpad with external buttons needs to mask a number of lower bits
   of the X and Y coordinates IFF a button is down.  This was not being
   done so a button held down looked like an out of range packet and
   was therefore dropped.

 * Now that trackpads are probed for their boundaries make the emulated
   button boundary settable by a percentage, also allow the right and
   bottom boundaries to be adjusted by a percentage to allow for
   horizontal and vertical scroll regions.


 To generate a diff of this commit:
 cvs rdiff -u -r1.76 -r1.77 src/sys/dev/pckbport/synaptics.c
 cvs rdiff -u -r1.13 -r1.14 src/sys/dev/pckbport/synapticsvar.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: blymn@NetBSD.org
State-Changed-When: Wed, 13 Apr 2022 21:56:35 +0000
State-Changed-Why:
Confirmed fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.